# processes_plugin

./: .gitignore  MANIFEST.in  README.md  __init__.py  processes_plugin.py  pyproject.toml
processes_plugin/: __init__.py
static/plugins/processes_plugin/: processes_panel.js
