[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processes-plugin"
version = "0.1.0"
description = "InvenTree plugin for processes."
requires-python = ">=3.10"
authors = [
  { name = "Niklas" }
]

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[project.entry-points."inventree_plugins"]
processes_plugin = "processes_plugin.processes_plugin:ProcessesPlugin"
