[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processes"
version = "0.1.0"
description = "InvenTree plugin for processes."
requires-python = ">=3.10"
authors = [
  { name = "Niklas" }
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[project.entry-points."inventree_plugins"]
processes = "processes_plugin.processes_plugin:ProcessesPlugin"
